--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
       <i class="fas fa-music"></i> Включить музыку
     </button>
     <input type="range" class="volume-control" id="volumeControl" min="0" max="1" step="0.1" value="0.7">
-    <p class="music-notice">Нажмите для воспроизведения</p>
+    <p class="music-notice">Нажми для открытия дверей в КРИНЖ</p>
   </div>
 
   <footer>
