upd цитаты (не ебу как англ)

--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
             <img src="images/memor1.jpg" alt="НАЧАЛО" title="Кликни, чтобы перевернуть">
           </div>
           <div class="flip-back">
-            <p>❝ Всё великое начинается с первого шага ❞</p>
+            <p>❝ Границы — это то, что чертят другие. А ты просто раскачалась, набрала разгон — и улетела дальше. Там, где начинается своё. ❞</p>
           </div>
         </div>
       </div>
@@ -696,7 +696,7 @@
             <img src="images/memor2.jpg" alt="2023" title="Кликни, чтобы перевернуть">
           </div>
           <div class="flip-back">
-            <p>❝ Ты уже тогда знала, что можешь больше ❞</p>
+            <p>❝ Ты решилась на то, что кажется безумием. И поняла — страхи остаются на земле. А ты поднимаешься выше. ❞</p>
           </div>
         </div>
       </div>
@@ -711,7 +711,7 @@
             <img src="images/memor3.jpg" alt="2025" title="Кликни, чтобы перевернуть">
           </div>
           <div class="flip-back">
-            <p>❝ Сила рождается в преодолении ❞</p>
+            <p>❝ Некоторые связи глубже крови. Вы не просто рядом — вы отражаете друг друга, как взгляд и улыбка. ❞</p>
           </div>
         </div>
       </div>
@@ -726,7 +726,7 @@
             <img src="images/memor4.jpg" alt="СЕЙЧАС" title="Кликни, чтобы перевернуть">
           </div>
           <div class="flip-back">
-            <p>❝ Ты — вдохновение для других ❞</p>
+            <p>❝ Сколько раз ты засыпала, не замечая — как становишься ближе к мечте. А потом просыпалась — и она была рядом. Ты - вдохновение для многих! ❞</p>
           </div>
         </div>
       </div>
