--- a/index.html
+++ b/index.html
@@ -786,8 +786,8 @@
   </footer>
 
   <audio id="bgMusic" loop>
-    <source src="music/love_song.ogg" type="audio/ogg">
-    <source src="music/love_song.mp3" type="audio/mpeg">
+    <source src="music/ZOKA_song.ogg" type="audio/ogg">
+    <source src="music/ZOKA_song.mp3" type="audio/mpeg">
   </audio>
 
   <script>
