--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
 
   <div class="music-player">
     <button class="music-btn" id="musicBtn">
-      <i class="fas fa-music"></i> Включить музыку
+      <i class="fas fa-music"></i> Навалить кринжа
     </button>
     <input type="range" class="volume-control" id="volumeControl" min="0" max="1" step="0.1" value="0.7">
     <p class="music-notice">Нажми для открытия дверей в КРИНЖ</p>
