upd text_stop_btn

--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
           document.body.style.setProperty('--glow', '0 0 10px rgba(255, 255, 255, 0.1)');
         } else {
           await music.play();
-          musicBtn.innerHTML = '<i class="fas fa-pause"></i> Пауза';
+          musicBtn.innerHTML = '<i class="fas fa-pause"></i> ХВАТИТ!';
           document.body.style.setProperty('--glow', '0 0 20px rgba(255, 255, 255, 0.4)');
         }
         isPlaying = !isPlaying;
