--- a/index.html
+++ b/index.html
@@ -60,27 +60,14 @@
     }
 
     .logo {
-    width: 220px; /* Было 180px */
-    margin: 40px 0;
-    filter: var(--glow);
-    transition: transform 0.5s cubic-bezier(0.22, 1, 0.36, 1), opacity 1s ease;
-    opacity: 0; /* Начальная прозрачность */
-    animation: fadeInLogo 1.5s ease 0.3s forwards; /* Анимация появления */
-    }
-
-    @keyframes fadeInLogo {
-    from { opacity: 0; transform: translateY(-10px); }
-    to { opacity: 1; transform: translateY(0); }
+      width: 220px;
+      margin: 40px 0;
+      filter: var(--glow);
+      transition: transform 0.5s cubic-bezier(0.22, 1, 0.36, 1);
     }
 
     .logo:hover {
-    transform: scale(1.08) rotate(-3deg); /* Усилил эффект ховера */
-    }
-
-    @media (max-width: 768px) {
-    .logo {
-        width: 180px; /* Чуть меньше на мобильных */
-          }
+      transform: scale(1.05) rotate(-2deg);
     }
 
     h1 {
