--- a/index.html
+++ b/index.html
@@ -479,6 +479,28 @@
 
     /* Адаптивность */
     @media (max-width: 768px) {
+      .envelope {
+    height: auto; /* Убираем фиксированную высоту */
+    min-height: 300px; /* Минимальная высота */
+    padding-top: 60px; /* Уменьшаем отступ сверху */
+  }
+ .envelope .flap {
+    height: 60px; /* Уменьшаем высоту клапана */
+  }
+       .envelope .message {
+    padding: 20px 15px; /* Уменьшаем отступы внутри */
+  }
+  .envelope .message p {
+    font-size: 1rem; /* Уменьшаем размер текста */
+  }
+  .envelope-front-logo img {
+    width: 80px; /* Уменьшаем логотип */
+  }
+        audio {
+    width: 100% !important;
+    min-width: 100%;
+  }
+}
       h1 {
         font-size: 1.8rem;
       }
@@ -608,6 +630,7 @@
 .envelope .message audio {
   width: 100%;
   max-width: 100%;
+      min-width: 100%
   outline: none;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -770,7 +793,7 @@
 </div>
 
 <div id="final-message" class="final-message" style="display: none;">
-  <p>✨ Спасибо, что прошла этот путь. Это — только начало. ✨</p>
+  <p>✨ Твой путь уже вдохновляет. А впереди — всё то, ради чего стоило идти. ✨</p>
 </div>
 
   <div class="music-player">
@@ -855,21 +878,23 @@
     });
 
     function openEnvelope() {
-    const envelope = document.querySelector('.envelope');
-    const audio = envelope.querySelector('audio');
+  const envelope = document.querySelector('.envelope');
+  const audio = envelope.querySelector('audio');
   
-    envelope.classList.toggle('open');
+  envelope.classList.toggle('open');
   
-    if (envelope.classList.contains('open')) {
-        // Разрешаем воспроизведение только после взаимодействия пользователя
-        audio.play().catch(e => {
-        console.log('Safari требует клика для аудио. Показываем подсказку.');
-        envelope.querySelector('.message p').textContent = '🎧 Нажми на кнопку плеера';
-        });
-        } else {
-            audio.pause();
-        }
+  if (envelope.classList.contains('open')) {
+    // Для мобильных устройств показываем подсказку сразу
+    if (window.innerWidth <= 768) {
+      envelope.querySelector('.message p').innerHTML = '🎧 Нажмите на кнопку плеера';
     }
+    audio.play().catch(e => {
+      envelope.querySelector('.message p').innerHTML = '🎧 Нажмите на кнопку плеера';
+    });
+  } else {
+    audio.pause();
+  }
+}
 
     function flipCard(container) {
   const isFlipped = container.classList.contains('flipped');
