--- a/index.html
+++ b/index.html
@@ -689,6 +689,11 @@
 @keyframes fadeIn {
   to { opacity: 1; }
 }
+
+.envelope.open .envelope-front-logo {
+    opacity: 0 !important;
+    transition: opacity 0.3s ease !important;
+}
   </style>
 </head>
 <body>
