--- a/index.html
+++ b/index.html
@@ -488,10 +488,6 @@
     height: 50px !important;
   }
   
-  .envelope .message {
-  pointer-events: none;
-}
-  
   .envelope .message p {
     font-size: 1rem !important;
     margin-bottom: 10px !important;
@@ -612,17 +608,17 @@
   transform: rotateX(-180deg);
 }
 
-.envelope .message {
+  .envelope .message {
   opacity: 0;
+  pointer-events: none;
   transform: translateY(30px);
   transition: all 0.8s ease 0.3s;
-  text-align: center;
-  padding: 40px 30px;
-  color: #000;
 }
 
 .envelope.open .message {
+  opacity: 1;
   pointer-events: auto;
+  transform: translateY(0);
 }
 
 .envelope .message p {
