--- a/index.html
+++ b/index.html
@@ -608,11 +608,13 @@
   transform: rotateX(-180deg);
 }
 
-  .envelope .message {
+.envelope .message {
   opacity: 0;
   pointer-events: none;
   transform: translateY(30px);
   transition: all 0.8s ease 0.3s;
+  padding: 20px;
+  text-align: center;
 }
 
 .envelope.open .message {
@@ -630,10 +632,10 @@
 
 .envelope .message audio {
   width: 100%;
-  max-width: 100%;
-  outline: none;
+  max-width: 360px;
+  margin: 0 auto;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  box-shadow: 0 0 10px rgba(255,255,255,0.1);
 }
 
 .envelope .message .envelope-logo {
