--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>ZOKA — Твой путь</title>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -480,23 +481,23 @@
     /* Адаптивность */
     @media (max-width: 768px) {
       .envelope {
-  aspect-ratio: 4 / 2.2;
-  height: auto;
-}
-  
-  .envelope .flap {
-    height: 50px !important;
+    height: auto;
+    aspect-ratio: 3 / 1.8;
+    padding-top: 40px;
   }
   
-  .envelope .message p {
-    font-size: 1rem !important;
-    margin-bottom: 10px !important;
+  .envelope .flap {
+  height: 40px;
+  font-size: 0.9rem;
+}
+  
+   .envelope .message p {
+    font-size: 0.9rem;
   }
   
   /* Аудиоплеер */
   .envelope .message audio {
-    width: 100% !important;
-    min-width: 100% !important;
+    max-width: 90%;
   }
   
   /* Логотип на конверте */
@@ -622,6 +623,7 @@
 .envelope.open .message {
   opacity: 1;
   pointer-events: auto;
+  transition-delay: 0.3s; /* Safari-friendly */
   transform: translateY(0);
 }
 
