--- a/index.html
+++ b/index.html
@@ -752,6 +752,21 @@
     </div>
     
     <div class="milestone">
+  <div class="milestone-date">ВЧЕРА</div>
+  <div class="milestone-text">Ты — причина, почему у других остаются такие дни.</div>
+  <div class="flip-container" onclick="flipCard(this)">
+    <div class="flip-inner">
+      <div class="flip-front">
+        <img src="images/memor7.jpg" alt="ВЧЕРА" title="Кликни, чтобы перевернуть">
+      </div>
+      <div class="flip-back">
+        <p>❝ И в каждом моменте, где ты рядом — остаётся свет. ❞</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <div class="milestone">
       <div class="milestone-date">СЕЙЧАС</div>
       <div class="milestone-text">Ты наконец оказалась внутри своей мечты — и показала, как это красиво</div>
       <div class="flip-container" onclick="flipCard(this)">
