--- a/index.html
+++ b/index.html
@@ -383,12 +383,12 @@
     }
 
     .flip-front img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    background-color: #000; /* чтобы края были не броские */
-    }
-
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 10px;
+}
     .flip-back {
     background: rgba(255, 255, 255, 0.08);
     backdrop-filter: blur(10px);
