--- a/index.html
+++ b/index.html
@@ -752,12 +752,12 @@
     </div>
     
     <div class="milestone">
-  <div class="milestone-date">ВЧЕРА</div>
+  <div class="milestone-date">НЕДАВНО</div>
   <div class="milestone-text">Ты — причина, почему у других остаются такие дни.</div>
   <div class="flip-container" onclick="flipCard(this)">
     <div class="flip-inner">
       <div class="flip-front">
-        <img src="images/memor7.jpg" alt="ВЧЕРА" title="Кликни, чтобы перевернуть">
+        <img src="images/memor7.jpg" alt="НЕДАВНО" title="Кликни, чтобы перевернуть">
       </div>
       <div class="flip-back">
         <p>❝ И в каждом моменте, где ты рядом — остаётся свет. ❞</p>
