--- a/index.html
+++ b/index.html
@@ -833,6 +833,33 @@
   <p>✨ Твой путь уже вдохновляет. А впереди — всё то, ради чего стоило идти. ✨</p>
 </div>
 
+<div class="milestone no-marker" style="margin-top: 80px;">
+  <div class="milestone-date">ПОСЛЕСЛОВИЕ</div>
+  <div class="milestone-text">Когда история дает новые возможности...</div>
+  
+  <div class="flip-container" onclick="flipCard(this)" style="max-width: 600px; margin: 30px auto;">
+    <div class="flip-inner">
+      <div class="flip-front">
+        <img src="images/postscript.png" alt="Послесловие" style="object-position: center top;">
+      </div>
+      <div class="flip-back" style="background: rgba(0, 0, 0, 0.85);">
+        <p style="font-size: 1.2rem; line-height: 1.7;">
+          ❝ Спасибо, что заглянула сюда. <br><br>
+          Этот сайт — как письмо в бутылке: <br>
+          его смысл не в совершенстве кода, <br>
+          а в моменте, когда ты его открыла. <br><br>
+          Пусть в твоей истории будет больше страниц, <br>
+          которые хочется перечитывать. ❞
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div style="text-align: center; margin: 50px 0 30px; font-style: italic; color: rgba(255,255,255,0.5);">
+  ~ Начало нового - неизведанного и прекрасного ~
+</div>
+
   <div class="music-player">
     <button class="music-btn" id="musicBtn">
       <i class="fas fa-music"></i> Навалить кринжа
@@ -1029,6 +1056,12 @@ logo.addEventListener('click', () => {
   }
 });
 
+document.addEventListener('DOMContentLoaded', function() {
+  const postscript = document.querySelector('.milestone.no-marker:last-child');
+  setTimeout(() => {
+    postscript.classList.add('visible');
+  }, 1000);
+});
 
   </script>
 </body>
