--- a/index.html
+++ b/index.html
@@ -835,22 +835,22 @@
 
 <div class="milestone no-marker" style="margin-top: 80px;">
   <div class="milestone-date">ПОСЛЕСЛОВИЕ</div>
-  <div class="milestone-text">Когда история дает новые возможности...</div>
+  <div class="milestone-text">Когда история уже написана...</div>
   
   <div class="flip-container" onclick="flipCard(this)" style="max-width: 600px; margin: 30px auto;">
     <div class="flip-inner">
       <div class="flip-front">
-        <img src="images/postscript.png" alt="Послесловие" style="object-position: center top;">
+        <img src="images/postscript.jpg" alt="Послесловие" style="object-position: center top;">
       </div>
-      <div class="flip-back" style="background: rgba(0, 0, 0, 0.85);">
-        <p style="font-size: 1.2rem; line-height: 1.7;">
-          ❝ Спасибо, что заглянула сюда. <br><br>
-          Этот сайт — как письмо в бутылке: <br>
-          его смысл не в совершенстве кода, <br>
-          а в моменте, когда ты его открыла. <br><br>
-          Пусть в твоей истории будет больше страниц, <br>
-          которые хочется перечитывать. ❞
-        </p>
+      <div class="flip-back" style="background: rgba(0, 0, 0, 0.85); padding: 15px;">
+        <div class="mobile-optimized-text">
+          ❝ Спасибо, что заглянула сюда.<br><br>
+          Этот сайт — как письмо в бутылке:<br>
+          его смысл не в совершенстве кода,<br>
+          а в моменте, когда ты его открыла.<br><br>
+          Пусть в твоей истории будет больше<br> 
+          страниц, которые хочется перечитывать. ❞
+        </div>
       </div>
     </div>
   </div>
