--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
   <div class="flip-container" onclick="flipCard(this)" style="max-width: 600px; margin: 30px auto;">
     <div class="flip-inner">
       <div class="flip-front">
-        <img src="images/postscript.jpg" alt="Послесловие" style="object-position: center top;">
+        <img src="images/postscript.png" alt="Послесловие" style="object-position: center top;">
       </div>
       <div class="flip-back" style="background: rgba(0, 0, 0, 0.85); padding: 15px;">
         <div class="mobile-optimized-text">
