--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
 
 <div class="milestone no-marker" style="margin-top: 80px;">
   <div class="milestone-date">ПОСЛЕСЛОВИЕ</div>
-  <div class="milestone-text">Когда история уже написана...</div>
+  <div class="milestone-text">Когда история только начинает раскручиваться..</div>
   
   <div class="flip-container" onclick="flipCard(this)" style="max-width: 600px; margin: 30px auto;">
     <div class="flip-inner">
